// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms | Development As currency 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Positive value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
        value={50}
      >
        <span
          aria-hidden={true}
        />
        +
        50
         USD
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Zero value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={0}
      >
        <span
          aria-hidden={true}
        />
        
        0
         USD
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Negative value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
        value={-200}
      >
        <span
          aria-hidden={true}
        />
        
        -200
         USD
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms | Development As percentage 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Positive value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
        value={5.4}
      >
        <span
          aria-hidden={true}
        />
        +
        5.4
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Zero value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={0}
      >
        <span
          aria-hidden={true}
        />
        
        0
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Negative value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
        value={-2.1}
      >
        <span
          aria-hidden={true}
        />
        
        -2.1
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms | Development Default 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Positive value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
        value={50}
      >
        <span
          aria-hidden={true}
        />
        +
        50
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Zero value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={0}
      >
        <span
          aria-hidden={true}
        />
        
        0
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Negative value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
        value={-200}
      >
        <span
          aria-hidden={true}
        />
        
        -200
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms | Development Integration: with different typographies 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      primary
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Positive value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
                value={5.4}
              >
                <span
                  aria-hidden={true}
                />
                +
                5.4
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Zero value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
                value={0}
              >
                <span
                  aria-hidden={true}
                />
                
                0
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Negative value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
                value={-2.1}
              >
                <span
                  aria-hidden={true}
                />
                
                -2.1
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      secondary
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Positive value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
                value={5.4}
              >
                <span
                  aria-hidden={true}
                />
                +
                5.4
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Zero value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
                value={0}
              >
                <span
                  aria-hidden={true}
                />
                
                0
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Negative value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
                value={-2.1}
              >
                <span
                  aria-hidden={true}
                />
                
                -2.1
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      tertiary
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 cHzAen"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Positive value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
                value={5.4}
              >
                <span
                  aria-hidden={true}
                />
                +
                5.4
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Zero value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
                value={0}
              >
                <span
                  aria-hidden={true}
                />
                
                0
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Negative value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
                value={-2.1}
              >
                <span
                  aria-hidden={true}
                />
                
                -2.1
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      caption
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ejTVkr"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Positive value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
                value={5.4}
              >
                <span
                  aria-hidden={true}
                />
                +
                5.4
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Zero value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
                value={0}
              >
                <span
                  aria-hidden={true}
                />
                
                0
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Negative value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
                value={-2.1}
              >
                <span
                  aria-hidden={true}
                />
                
                -2.1
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      title1
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Positive value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
                value={5.4}
              >
                <span
                  aria-hidden={true}
                />
                +
                5.4
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Zero value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
                value={0}
              >
                <span
                  aria-hidden={true}
                />
                
                0
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Negative value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
                value={-2.1}
              >
                <span
                  aria-hidden={true}
                />
                
                -2.1
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      title2
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Positive value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
                value={5.4}
              >
                <span
                  aria-hidden={true}
                />
                +
                5.4
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Zero value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
                value={0}
              >
                <span
                  aria-hidden={true}
                />
                
                0
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Negative value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
                value={-2.1}
              >
                <span
                  aria-hidden={true}
                />
                
                -2.1
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      title3
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Positive value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
                value={5.4}
              >
                <span
                  aria-hidden={true}
                />
                +
                5.4
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Zero value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
                value={0}
              >
                <span
                  aria-hidden={true}
                />
                
                0
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Negative value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
                value={-2.1}
              >
                <span
                  aria-hidden={true}
                />
                
                -2.1
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      hero
    </div>
    <div>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lmsdTq"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
          direction="column"
        >
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Positive value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
                value={5.4}
              >
                <span
                  aria-hidden={true}
                />
                +
                5.4
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Zero value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
                value={0}
              >
                <span
                  aria-hidden={true}
                />
                
                0
              </span>
            </div>
          </div>
          <div
            className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
            direction="row"
          >
            <div
              className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
            >
              Negative value
            </div>
            <div>
              <span
                className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
                value={-2.1}
              >
                <span
                  aria-hidden={true}
                />
                
                -2.1
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms | Development Regression: infinity 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      +Infinity
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={Infinity}
      >
        <span
          aria-hidden={true}
        />
        -
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      -Infinity
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={-Infinity}
      >
        <span
          aria-hidden={true}
        />
        -
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms | Development Regression: value is non-zero, but rounded value is 0 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      \`value = 0.3\` and decimals = 0
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={0}
      >
        <span
          aria-hidden={true}
        />
        
        0
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      \`value = -0.3 and decimals = 0\`
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={-0}
      >
        <span
          aria-hidden={true}
        />
        
        0
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      \`value = -1.3123 and decimals = 3\`
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
        value={-1.312}
      >
        <span
          aria-hidden={true}
        />
        
        -1.312
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      \`value = -0.3 and maximumDecimals = 0\`
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={-0}
      >
        <span
          aria-hidden={true}
        />
        
        0
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      \`value = 0.3\`
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={0}
      >
        <span
          aria-hidden={true}
        />
        
        0
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms | Development With icon 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Positive value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
        value={50}
      >
        <span
          aria-hidden={true}
        >
          ▲
        </span>
        +
        50
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Zero value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 fPVylT"
        value={0}
      >
        <span
          aria-hidden={true}
        >
          
        </span>
        
        0
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Negative value
    </div>
    <div>
      <span
        className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
        value={-200}
      >
        <span
          aria-hidden={true}
        >
          ▼
        </span>
        
        -200
      </span>
    </div>
  </div>
</div>
`;
